@@ -632,6 +632,21 @@
                     <default>true</default>
                     <control type="toggle"/>
                 </setting>
+                <setting id="animetosho.paging" type="integer" label="30640" help="30641" parent="provider.animetosho">
+                    <level>0</level>
+                    <default>1</default>
+                    <constraints>
+                        <minimum>1</minimum>
+                        <step>1</step>
+                        <maximum>15</maximum>
+                    </constraints>
+                    <control type="slider" format="integer">
+                        <popup>false</popup>
+                    </control>
+                    <dependencies>
+                        <dependency type="visible" setting="provider.animetosho">true</dependency>
+                    </dependencies>
+                </setting>
             </group>
 
             <!-- Embeds -->
